# tree-sitter-galvan

./: Cargo.toml  Makefile  Package.swift  binding.gyp  empty.galvan  grammar.js  helpers.js  min.galvan  package-lock.json  package.json  precedence.js  pyproject.toml  setup.py  test.galvan  tree-sitter-Galvan.wasm  tree-sitter.json
.github/workflows/: ci.yaml
bindings/c/: tree-sitter-Galvan.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tree_sitter_galvan/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterGalvan/: Galvan.h
galvan.dylib.dSYM/Contents/: Info.plist
galvan.dylib.dSYM/Contents/Resources/Relocations/aarch64/: galvan.dylib.yml
grammar/: expression.js  infix.js  keywords.js  literals.js  space.js  symbols.js  type_declaration.js  type_item.js
queries/: highlights.scm  indents.scm  textobjects.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: fn.txt  literal.txt  main.txt  range.txt  statement.txt  test.txt  type_item.txt  use.txt
test/corpus/expression/: associated_item.txt  bitwise.txt  constructor.txt  else.txt  fn_call.txt  infix.txt  logical.txt  match.txt  member.txt  postfix.txt  trailing_closure.txt
test/corpus/type_declaration/: struct.txt  tuple.txt
