[package]
name = "tree-sitter-galvan"
description = "Galvan grammar for tree-sitter"
version = "0.0.2"
license = "MIT"
keywords = ["incremental", "parsing", "tree-sitter", "galvan"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-galvan"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.22.6"

[build-dependencies]
cc = "1.0.87"
